syntax = "proto3";

package schedule;

service ScheduleService {
  rpc CreateSchedule (CreateScheduleRequest) returns (CreateScheduleResponse) {};
  rpc ListSchedule (ListScheduleRequest) returns (ListScheduleResponse) {};
}

// CreateSchedule のリクエスト定義
message CreateScheduleRequest {
  string title = 1;
  string deadline = 2;
  string content = 3;
}

// CreateSchedule のレスポンス定義
message CreateScheduleResponse {
  uint64 id = 1;
  string title = 2;
  string deadline = 3;
  string content = 4;
}

// ListSchedule のリクエスト定義
message ListScheduleRequest {}

// ListSchedule のレスポンス定義
message ListScheduleResponse {
  repeated Schedule schedules = 1;
}

message Schedule {
  uint64 id = 1;
  string title = 2;
  string deadline = 3;
  string content = 4;
}